# zappy

./: .gitignore  README.md  beacon.py  display.py  index.html  install.sh  meow.json  package-lock.json  relaycontrol.py  runbeacon.sh  rustInstall.sh  serviceInstall.sh  setup  socketcontrol.py  spec.md  updateservice.sh  zappyServer
copytoroot/: config.txt  wpa_supplicant.conf
display/: display.py
display/adafruit-circuitpython-bundle-5.x-mpy-20200117/: VERSIONS.txt
display/adafruit-circuitpython-bundle-5.x-mpy-20200117/examples/: bluefruitconnect_accelerometer_packet_test.py  bluefruitconnect_simpletest.py  circuitplayground_touch_a1.py  display_button_simpletest.py  fingerprint_simpletest.py  ht16k33_matrix_pillow_image.py  ht16k33_matrix_simpletest.py  ht16k33_segments_simpletest.py  ism330dhct_simpletest.py  lis3mdl_data_rate_test.py  lis3mdl_range_test.py  lis3mdl_simpletest.py  lsm6ds33_simpletest.py  lsm6ds_full_test.py  lsm6ds_rate_test.py  lsm6dsox_simpletest.py  mcp4728_vref_example.py  mlx90640_camtest.py  mlx90640_pygamer.py  motorkit_robot.py
python/: pirelaycontrol.py  tensControl.py
rust/: Cargo.toml  devices.help.yaml  devices.yaml  figurestuffout.txt  hi.json  index.html  index.js  readme.md  spec.yaml
rust/src/: config.rs  device.rs  fileio.rs  main.rs  piGpio.rs  websocket.rs
service/: meow.py  runbeacon.sh  setup  zappyServer
zappyservice/: index.html  index.js  runbeacon.sh  setup  spec.json  zappyServer
zappyservice/python/: psudorelaycontrol.py  socketcontrol.py
zappyservice/service/: beacon.py  updateservice.sh  zappyServer
(+137 files in other folders)
