[package]
name = "zappy"
version = "0.1.0"
authors = ["Violet Boyse-Peacor <mookbot@gmail.com>", "SnowingCinders <SnowingCinders@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpio = "0.4.1"
serde_yaml = "0.8.11"
serde = { version = "1.0", features = ["derive"] }
ws = "0.9.1"


# buttplug = "0.0.2"
# blurz = "0.4.0"
# bluster = "0.1.2"